--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,11 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     implementation 'com.google.code.gson:gson:2.9.0'
-    implementation group: 'com.google.code.gson', name: 'gson', version: '2.7'
+
+    compileOnly 'org.projectlombok:lombok:1.18.22'
+    annotationProcessor 'org.projectlombok:lombok:1.18.22'
+    //implementation group: 'com.google.code.gson', name: 'gson', version: '2.7'
+
 }
 
 test {
